--- a/templates/login.gohtml
+++ b/templates/login.gohtml
@@ -6,23 +6,61 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HTML 5 Boilerplate</title>
     <link rel="stylesheet" href="/static/index.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Login</h1>
-    <h2>Please fill up the form</h2>
-    <form method="POST" enctype="multipart/form-data">
-    <div class="col">
-        <label for="name">Your name</label>
-        <input id="name" type="text" name="name" maxlength=128 minlength=3 placeholder="Joe" required/>
-    </div>
-    <div class="col">
-      <label for="password">Your password</label>
-      <input  id="password" type="password" name="password" maxlength=128 minlength=4 placeholder="secretPassword" required/>
-    </div>
-    <div class="col">
-      <input  id="submitLogin" type="submit"/>
-    </div>
-    </form>
+
+    <!-- Section: Design Block -->
+    <section class="">
+      <!-- Jumbotron -->
+      <div class="px-4 py-5 px-md-5 text-center text-lg-start" style="background-color: hsl(0, 0%, 96%)">
+        <div class="container">
+          <div class="row gx-lg-5 align-items-center">
+            <div class="col-lg-6 mb-5 mb-lg-0">
+              <h1 class="my-5 display-3 fw-bold ls-tight">
+                The best offer <br />
+                <span class="text-primary">for your business</span>
+              </h1>
+              <p style="color: hsl(217, 10%, 50.8%)">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Eveniet, itaque accusantium odio, soluta, corrupti aliquam
+                quibusdam tempora at cupiditate quis eum maiores libero
+                veritatis? Dicta facilis sint aliquid ipsum atque?
+              </p>
+            </div>
+
+            <div class="col-lg-6 mb-5 mb-lg-0">
+              <div class="card">
+                <div class="card-body py-5 px-md-5">
+                  <form method="POST">
+                    <!-- Email input -->
+                    <div data-mdb-input-init class="form-outline mb-4">
+                      <input name="email" type="email" id="form3Example3" class="form-control" />
+                      <label class="form-label" for="form3Example3">Email address</label>
+                    </div>
+
+                    <!-- Password input -->
+                    <div data-mdb-input-init class="form-outline mb-4">
+                      <input type="password" name="password" id="form3Example4" class="form-control" maxlength=128 minlength=4 placeholder="secretPassword" required/>
+                      <label class="form-label" for="form3Example4">Password</label>
+                    </div>
+
+                    <!-- Submit button -->
+                    <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-block mb-4">
+                      Sign in
+                    </button>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Jumbotron -->
+    </section>
+    <!-- Section: Design Block -->
 	{{/* TODO: add JS <script src="index.js"></script> */}}
   </body>
 </html>
+
