added bootstrap to  welcome

--- a/templates/login.gohtml
+++ b/templates/login.gohtml
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML 5 Boilerplate</title>
+    <title>writers</title>
     <link rel="stylesheet" href="/static/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   </head>
@@ -35,13 +35,13 @@
                   <form method="POST">
                     <!-- Email input -->
                     <div data-mdb-input-init class="form-outline mb-4">
-                      <input name="email" type="email" id="form3Example3" class="form-control" />
+                      <input name="email" type="email" id="form3Example3" class="form-control" maxlength=128 placeholder="mymail@mail.com" required />
                       <label class="form-label" for="form3Example3">Email address</label>
                     </div>
 
                     <!-- Password input -->
                     <div data-mdb-input-init class="form-outline mb-4">
-                      <input type="password" name="password" id="form3Example4" class="form-control" maxlength=128 minlength=4 placeholder="secretPassword" required/>
+                      <input type="password" name="password" id="form3Example4" class="form-control" maxlength=128 minlength=4 placeholder="Pa$$sw0rd" required/>
                       <label class="form-label" for="form3Example4">Password</label>
                     </div>
 
