--- a/templates/welcome.gohtml
+++ b/templates/welcome.gohtml
@@ -4,38 +4,71 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML 5 Boilerplate</title>
+    <title>writers</title>
     <link rel="stylesheet" href="/static/index.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Welcome</h1>
-    <h2>Submit your work</h2>
-    <form method="POST" enctype="multipart/form-data">
-    <div class="col">
-        <label for="name">Your name:</label>
-        <input  id="name" type="text" name="name" maxlength=128 minlength=4 required placeholder="A nice story"/>
+  <form method="GET" action="/logout">
+    <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-block mb-4">
+    logout
+    </button>
+  </form>
+
+     <!-- Section: Design Block -->
+    <section class="">
+    <!-- Jumbotron -->
+    <div class="px-4 py-5 px-md-5 text-center text-lg-start" style="background-color: hsl(0, 0%, 96%)">
+        <div class="container">
+        <div class="row gx-lg-5 align-items-center">
+            <div class="col-lg-6 mb-5 mb-lg-0">
+            <div class="card">
+                <div class="card-body py-5 px-md-5">
+                <form method="POST" enctype="multipart/form-data">
+                    <!-- 2 column grid layout with text inputs for the first and last names -->
+                    <div class="row">
+                      <div class="col-md-6 mb-4">
+                          <div data-mdb-input-init class="form-outline">
+                            <label class="form-label" for="form3Example1">Title</label>
+                            <input type="text" name="name" id="form3Example1" class="form-control" maxlength=128 minlength=4 required placeholder="A nice story"/>
+                          </div>
+                          <div data-mdb-input-init class="form-outline">
+                            <div class="mb-3">
+                              <label for="formFile" class="form-label">My story</label>
+                              <input class="form-control" id="textFile" type="file" name="textFile" accept=".doc, .docx, .text, .txt" required>
+                            </div>
+                            <span class="text-secondary">file must be format .doc, .docx, .text, or .txt only</span>
+                          </div>
+                      </div>
+                      <input class="form-check-input me-2" name="isPublic" type="checkbox" value="" id="publicCheck" checked />
+                      <label class="form-check-label" for="form2Example33">
+                        make it public
+                      </label>
+                    </div>
+                    <!-- Submit button -->
+                    <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-block mb-4">
+                    Submit my work
+                    </button>
+                </form>
+                </div>
+            </div>
+            </div>
+        </div>
+        </div>
+        
+        <div class="col-lg-6 mb-5 mb-lg-0">
+          {{if .Text}}
+            <h1 class="my-5 display-3 fw-bold ls-tight text-primary">
+                {{.Name}}<br />
+            </h1>
+            <p style="color: hsl(217, 10%, 50.8%)">
+                {{.Text}}
+            </p>
+            <a href="/text" class="text-secondary"> see my information</a>
+          {{end}}
+        </div>
     </div>
-    <div class="col">
-         <label for="textFile">Your text file:</label>
-        <input  id="textFile" type="file" name="textFile" accept=".doc, .docx, .text, .txt" required/>
-    </div>
-    <div>
-        <input type="submit"/>
-    </div>
-    </form>
-    <form method="GET" action="/logout">
-    <div class="col">
-      <input id="submitLogout" type="submit" value="input">
-    </div>
-    </form>
-    {{if .Text}}
-    <p> information submitted successfully </p>
-    <h2>File title</h2>
-    <p>{{.Name}}</p>
-    <h2>File content</h2>
-    <p>{{.Text}}</p>
-    <a href="/text"> see my information</a>
-    {{end}}
+
 	{{/* TODO: add JS <script src="index.js"></script> */}}
   </body>
 </html>
