upudated welcome css

--- a/templates/login.gohtml
+++ b/templates/login.gohtml
@@ -49,6 +49,7 @@
                     <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-block mb-4">
                       Sign in
                     </button>
+                    <p class="text-secondary">Want to register? <a href="/sign-up">Sign-up!</a><p>
                     </div>
                   </form>
                 </div>
