--- a/templates/signup.gohtml
+++ b/templates/signup.gohtml
@@ -19,18 +19,18 @@
             <div class="col-lg-6 mb-5 mb-lg-0">
             <div class="card">
                 <div class="card-body py-5 px-md-5">
-                <form>
+                <form method="POST">
                     <!-- 2 column grid layout with text inputs for the first and last names -->
                     <div class="row">
                     <div class="col-md-6 mb-4">
                         <div data-mdb-input-init class="form-outline">
-                        <input type="text" id="form3Example1" class="form-control" />
+                        <input type="text" name="firstName" id="form3Example1" class="form-control" />
                         <label class="form-label" for="form3Example1">First name</label>
                         </div>
                     </div>
                     <div class="col-md-6 mb-4">
                         <div data-mdb-input-init class="form-outline">
-                        <input type="text" id="form3Example2" class="form-control" />
+                        <input type="text" name="lastName" id="form3Example2" class="form-control" />
                         <label class="form-label" for="form3Example2">Last name</label>
                         </div>
                     </div>
@@ -38,19 +38,19 @@
 
                     <!-- Email input -->
                     <div data-mdb-input-init class="form-outline mb-4">
-                    <input type="email" id="form3Example3" class="form-control" />
+                    <input type="email" name="email" id="form3Example3" class="form-control" />
                     <label class="form-label" for="form3Example3">Email address</label>
                     </div>
 
                     <!-- Password input -->
                     <div data-mdb-input-init class="form-outline mb-4">
-                    <input type="password" id="form3Example4" class="form-control" />
+                    <input type="password" name="password" id="form3Example4" class="form-control" />
                     <label class="form-label" for="form3Example4">Password</label>
                     </div>
 
                     <!-- Checkbox -->
                     <div class="form-check d-flex justify-content-center mb-4">
-                    <input class="form-check-input me-2" type="checkbox" value="" id="form2Example33" />
+                    <input class="form-check-input me-2" name="accept" type="checkbox" value="" id="form2Example33" required/>
                     <label class="form-check-label" for="form2Example33">
                         Accept terms and policy
                     </label>
