--- a/templates/welcome.gohtml
+++ b/templates/welcome.gohtml
@@ -64,6 +64,9 @@
             <h1 class="my-5 display-3 fw-bold ls-tight text-primary">
                 {{.Name}}<br />
             </h1>
+            <h1 class="my-5 display-3 fw-bold ls-tight text-secondary">
+              written by {{.User.FirstName}} {{.User.LastName}}<br />
+            </h1>
             <p style="color: hsl(217, 10%, 50.8%)">
                 {{.Text}}
             </p>
