--- a/templates/signup.gohtml
+++ b/templates/signup.gohtml
@@ -56,6 +56,17 @@
                     </label>
                     </div>
 
+                    <!-- Role -->
+                   <div class="input-group mb-3">
+                        <label class="input-group-text" for="inputGroupSelect01" >Options</label>
+                        <select class="form-select" id="inputGroupSelect01" name="role">
+                            <option selected>Role...</option>
+                            <option value="admin">Admin</option>
+                            <option value="writer">Writer</option>
+                            <option value="reader">Reader</option>
+                        </select>
+                    </div>
+
                     <!-- Submit button -->
                     <div class="text-center">
                         <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-block mb-4">
